--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -3616,6 +3616,224 @@
     "# Display the result\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table: DailySales\n",
+    "\n",
+    "+-------------+---------+\n",
+    "| Column Name | Type    |\n",
+    "+-------------+---------+\n",
+    "| date_id     | date    |\n",
+    "| make_name   | varchar |\n",
+    "| lead_id     | int     |\n",
+    "| partner_id  | int     |\n",
+    "+-------------+---------+\n",
+    "There is no primary key (column with unique values) for this table. It may contain duplicates.\n",
+    "This table contains the date and the name of the product sold and the IDs of the lead and partner it was sold to.\n",
+    "The name consists of only lowercase English letters.\n",
+    " \n",
+    "\n",
+    "For each date_id and make_name, find the number of distinct lead_id's and distinct partner_id's.\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\n",
+    "The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: \n",
+    "DailySales table:\n",
+    "+-----------+-----------+---------+------------+\n",
+    "| date_id   | make_name | lead_id | partner_id |\n",
+    "+-----------+-----------+---------+------------+\n",
+    "| 2020-12-8 | toyota    | 0       | 1          |\n",
+    "| 2020-12-8 | toyota    | 1       | 0          |\n",
+    "| 2020-12-8 | toyota    | 1       | 2          |\n",
+    "| 2020-12-7 | toyota    | 0       | 2          |\n",
+    "| 2020-12-7 | toyota    | 0       | 1          |\n",
+    "| 2020-12-8 | honda     | 1       | 2          |\n",
+    "| 2020-12-8 | honda     | 2       | 1          |\n",
+    "| 2020-12-7 | honda     | 0       | 1          |\n",
+    "| 2020-12-7 | honda     | 1       | 2          |\n",
+    "| 2020-12-7 | honda     | 2       | 1          |\n",
+    "+-----------+-----------+---------+------------+\n",
+    "Output: \n",
+    "+-----------+-----------+--------------+-----------------+\n",
+    "| date_id   | make_name | unique_leads | unique_partners |\n",
+    "+-----------+-----------+--------------+-----------------+\n",
+    "| 2020-12-8 | toyota    | 2            | 3               |\n",
+    "| 2020-12-7 | toyota    | 1            | 2               |\n",
+    "| 2020-12-8 | honda     | 2            | 2               |\n",
+    "| 2020-12-7 | honda     | 3            | 2               |\n",
+    "+-----------+-----------+--------------+-----------------+\n",
+    "Explanation: \n",
+    "For 2020-12-8, toyota gets leads = [0, 1] and partners = [0, 1, 2] while honda gets leads = [1, 2] and partners = [1, 2].\n",
+    "For 2020-12-7, toyota gets leads = [0] and partners = [1, 2] while honda gets leads = [0, 1, 2] and partners = [1, 2]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date_id</th>\n",
+       "      <th>make_name</th>\n",
+       "      <th>lead_id</th>\n",
+       "      <th>partner_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-12-8</td>\n",
+       "      <td>toyota</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-12-8</td>\n",
+       "      <td>toyota</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-12-8</td>\n",
+       "      <td>toyota</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-12-7</td>\n",
+       "      <td>toyota</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-12-7</td>\n",
+       "      <td>toyota</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-12-8</td>\n",
+       "      <td>honda</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-12-8</td>\n",
+       "      <td>honda</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-12-7</td>\n",
+       "      <td>honda</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-12-7</td>\n",
+       "      <td>honda</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2020-12-7</td>\n",
+       "      <td>honda</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     date_id make_name  lead_id  partner_id\n",
+       "0  2020-12-8    toyota        0           1\n",
+       "1  2020-12-8    toyota        1           0\n",
+       "2  2020-12-8    toyota        1           2\n",
+       "3  2020-12-7    toyota        0           2\n",
+       "4  2020-12-7    toyota        0           1\n",
+       "5  2020-12-8     honda        1           2\n",
+       "6  2020-12-8     honda        2           1\n",
+       "7  2020-12-7     honda        0           1\n",
+       "8  2020-12-7     honda        1           2\n",
+       "9  2020-12-7     honda        2           1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "sales_data = pd.DataFrame({\n",
+    "    \"date_id\": [\"2020-12-8\", \"2020-12-8\", \"2020-12-8\", \"2020-12-7\", \"2020-12-7\",\n",
+    "                \"2020-12-8\", \"2020-12-8\", \"2020-12-7\", \"2020-12-7\", \"2020-12-7\"],\n",
+    "    \"make_name\": [\"toyota\", \"toyota\", \"toyota\", \"toyota\", \"toyota\",\n",
+    "                  \"honda\", \"honda\", \"honda\", \"honda\", \"honda\"],\n",
+    "    \"lead_id\": [0, 1, 1, 0, 0, 1, 2, 0, 1, 2],\n",
+    "    \"partner_id\": [1, 0, 2, 2, 1, 2, 1, 1, 2, 1]\n",
+    "})\n",
+    "sales_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def daily_leads_and_partners(daily_sales: pd.DataFrame) -> pd.DataFrame:\n",
+    "    df = daily_sales.groupby(['date_id','make_name'],as_index=False)[['lead_id','partner_id']].nunique()\n",
+    "    df.rename(columns={'lead_id':'unique_leads','partner_id':'unique_partners'}, inplace=True)\n",
+    "    return df   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
